修复错误，添加Application代理模式，使组件化更顺畅。

--- a/Module_IM/src/main/debug/AndroidManifest.xml
+++ b/Module_IM/src/main/debug/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:name="com.tom.common.base.CommonApplication"
+        android:name="com.tom.baselib.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -27,5 +27,24 @@
             android:name="com.amap.api.v2.apikey"
             android:value="高德地图的 AppKey" />
 
+        <!-- 每个业务组件需要声明两个 ConfigModule, CommonSDK 的 ConfigModule 和 业务组件自己的 ConfigModule
+       CommonSDK 的 ConfigModule 含有有每个组件都可共用的配置信息, 业务组件自己的 ConfigModule 含有自己独有的配置
+       信息, 这样即可重用代码, 又可以允许每个组件可自行管理自己独有的配置信息, 如果业务组件没有独有的配置信息则只需要
+       声明 CommonSDK 的 ConfigModule -->
+        <meta-data
+            android:name="me.jessyan.armscomponent.commonsdk.core.GlobalConfiguration"
+            android:value="ConfigModule" />
+        <meta-data
+            android:name="me.jessyan.armscomponent.gank.app.GlobalConfiguration"
+            android:value="ConfigModule" />
+
+        <activity
+            android:name=".ui.ChatDetailActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity
+            android:name=".ui.ChatListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
     </application>
 </manifest>
