--- a/ThirdLibrarys/TomBaseLib/src/main/AndroidManifest.xml
+++ b/ThirdLibrarys/TomBaseLib/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tom.baselib">
 
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <application>
         <activity
             android:name=".utils.PermissionUtils$PermissionActivity"
