--- a/CommonSDK/src/main/AndroidManifest.xml
+++ b/CommonSDK/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name="com.tom.baselib.BaseApplication"
         android:allowBackup="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
