修复Application多实现的实现方式，更合理。修复多线程Application多次执行onCreate的bug

--- a/Module_IM/build.gradle
+++ b/Module_IM/build.gradle
@@ -80,4 +80,5 @@ dependencies {
     implementation project(':RongCloud:CallLib')
     implementation project(':RongCloud:IMKit')
     implementation project(':RongCloud:IMLib')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 }
