--- a/CommonSDK/src/main/AndroidManifest.xml
+++ b/CommonSDK/src/main/AndroidManifest.xml
@@ -11,10 +11,15 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.tom.baselib.BaseApplication"
+        android:name="com.tom.common.base.CommonApplication"
         android:allowBackup="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="ConfigModule"
+            android:value="com.tom.common.AppImpl" />
+
         <activity
             android:name=".ui.LoginActivity"
             android:launchMode="singleInstance"
