--- a/Module_IM/src/main/debug/AndroidManifest.xml
+++ b/Module_IM/src/main/debug/AndroidManifest.xml
@@ -11,12 +11,20 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:name="com.tom.baselib.BaseApplication"
+        android:name="com.tom.common.base.CommonApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:value="ConfigModule"
+            android:name="com.tom.common.AppImpl" />
+
+        <meta-data
+            android:value="ConfigModule"
+            android:name="com.tom.im.AppImpl" />
 
         <!-- 全面屏适配 -->
         <meta-data
@@ -35,6 +43,16 @@
             android:name=".ui.ChatListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize" />
-    </application>
 
+
+        <activity
+            android:name="com.tom.im.ui.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
