--- a/ThirdLibrarys/TomBaseLib/src/main/AndroidManifest.xml
+++ b/ThirdLibrarys/TomBaseLib/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.tom.baselib">
 
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+    <uses-permission
+        android:name="android.permission.PACKAGE_USAGE_STATS"
+        tools:ignore="ProtectedPermissions" />
     <application>
         <activity
             android:name=".utils.PermissionUtils$PermissionActivity"
