--- a/config.gradle
+++ b/config.gradle
@@ -26,7 +26,8 @@ ext {
             GSON_VERSION : '2.8.5',
             AROUTER_VERSION : '1.3.1',
             AROUTER_COMPILER_VERSION : '1.1.4',
-            OKHTTP_VERSION:'3.10.0'
+            OKHTTP_VERSION:'3.10.0',
+            BUTTERKNIFE_VERSION:'8.8.1'
     ]
 
 
