--- a/WanAndroid/build.gradle
+++ b/WanAndroid/build.gradle
@@ -37,48 +37,46 @@ android {
 
     buildTypes {
         debug {
-            signingConfig  signingConfigs.debug
+            signingConfig signingConfigs.debug
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
         release {
-            signingConfig  signingConfigs.release
+            signingConfig signingConfigs.release
             zipAlignEnabled true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
 
-    greendao {
-        //数据库的schema版本，也可以理解为数据库版本号
-        schemaVersion 1
-        //设置DaoMaster、DaoSession、Dao包名，也就是要放置这些类的包的全路径。
-        daoPackage 'com.android.tomflying.dao'
-        //设置DaoMaster、DaoSession、Dao目录
-        targetGenDir 'src/main/java'
-    }
+greendao {
+    //数据库的schema版本，也可以理解为数据库版本号
+    schemaVersion 1
+    //设置DaoMaster、DaoSession、Dao包名，也就是要放置这些类的包的全路径。
+    daoPackage 'com.android.tomflying.dao'
+    //设置DaoMaster、DaoSession、Dao目录
+    targetGenDir 'src/main/java'
+}
 
-    dependencies {
-        implementation fileTree(include: ['*.jar'], dir: 'libs')
-        implementation project(':ThirdLibrarys:AgentWeb')
-        implementation project(':ThirdLibrarys:BRVAH')
-        implementation project(':ThirdLibrarys:TomBaseLib')
-        implementation project(':ThirdLibrarys:QMUI')
-        implementation project(':ThirdLibrarys:Banner')
-
-
-        implementation rootProject.ext.dependencies["appcompat-v7"]
-        implementation rootProject.ext.dependencies["design"]
-        implementation rootProject.ext.dependencies["constraint-layout"]
-        implementation rootProject.ext.dependencies["eventbus"]
-        implementation rootProject.ext.dependencies["glide"]
-        implementation rootProject.ext.dependencies["greendao"]
-        implementation rootProject.ext.dependencies["gson"]
-
-        implementation 'com.tencent.bugly:crashreport_upgrade:1.3.5'
-    }
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':ThirdLibrarys:AgentWeb')
+    implementation project(':ThirdLibrarys:BRVAH')
+    implementation project(':ThirdLibrarys:TomBaseLib')
+    implementation project(':ThirdLibrarys:QMUI')
+    implementation project(':ThirdLibrarys:Banner')
+    implementation project(':ThirdLibrarys:PhotoView')
 
 
+    implementation rootProject.ext.dependencies["appcompat-v7"]
+    implementation rootProject.ext.dependencies["design"]
+    implementation rootProject.ext.dependencies["constraint-layout"]
+    implementation rootProject.ext.dependencies["eventbus"]
+    implementation rootProject.ext.dependencies["glide"]
+    implementation rootProject.ext.dependencies["greendao"]
+    implementation rootProject.ext.dependencies["gson"]
 
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.5'
 }
