--- a/WanAndroid/src/main/AndroidManifest.xml
+++ b/WanAndroid/src/main/AndroidManifest.xml
@@ -7,11 +7,11 @@
 
     <application
         android:name=".base.MyApplication"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:allowBackup="false"
         android:theme="@style/AppTheme">
 
         <!-- 全面屏适配 -->
@@ -37,12 +37,10 @@
         <activity android:name=".ui.ArticleCollectedActivity" />
         <activity android:name=".ui.SearchActivity" />
         <activity android:name=".ui.SearchResultActivity" />
-
         <activity
             android:name="com.tencent.bugly.beta.ui.BetaActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale"
             android:theme="@android:style/Theme.Translucent" />
-
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -54,6 +52,14 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
+        <activity android:name=".ui.CalendarActivity" />
+        <activity
+            android:name=".ui.MeiziActivity"
+            android:windowContentTransitions="true" />
+        <activity android:name=".ui.MeiwenActivity" />
+        <activity
+            android:name=".ui.PictureActivity"
+            android:windowContentTransitions="true" />
     </application>
 
 </manifest>
