--- a/WanAndroid/src/main/AndroidManifest.xml
+++ b/WanAndroid/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
         <!-- 全面屏适配 -->
         <meta-data
             android:name="android.max_aspect"
-            android:value="2.1" />
+            android:value="2.34" />
+
+        <meta-data
+            android:name="android.notch_support"
+            android:value="true" />
 
         <activity
             android:name=".ui.MainActivity"
