--- a/Module_IM/build.gradle
+++ b/Module_IM/build.gradle
@@ -16,10 +16,10 @@ android {
         versionName "1.0.0"
 
         multiDexEnabled true
+
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = [moduleName: project.getName()]
-                includeCompileClasspath true
+                arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable"]
             }
         }
 
