--- a/ThirdLibrarys/TomBaseLib/src/main/AndroidManifest.xml
+++ b/ThirdLibrarys/TomBaseLib/src/main/AndroidManifest.xml
@@ -13,5 +13,16 @@
             android:multiprocess="true"
             android:theme="@style/ActivityTranslucent"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
+
+        <provider
+            android:name=".utils.Utils$FileProvider4Util"
+            android:authorities="${applicationId}.utilcode.provider"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            android:multiprocess="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/util_code_provider_paths" />
+        </provider>
     </application>
 </manifest>
