--- a/Module_IM/build.gradle
+++ b/Module_IM/build.gradle
@@ -16,7 +16,11 @@ android {
         versionName "1.0.0"
 
         multiDexEnabled true
-
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable"]
+            }
+        }
     }
 
     buildTypes {
