--- a/ThirdLibrarys/TomBaseLib/src/main/AndroidManifest.xml
+++ b/ThirdLibrarys/TomBaseLib/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
 
         <provider
-            android:name=".utils.Utils$FileProvider4Util"
+            android:name=".utils.Utils$FileProvider4UtilCode"
             android:authorities="${applicationId}.utilcode.provider"
             android:exported="false"
             android:grantUriPermissions="true"
