--- a/ThirdLibrarys/FreeProGuard/build.gradle
+++ b/ThirdLibrarys/FreeProGuard/build.gradle
@@ -3,25 +3,23 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion rootProject.ext.android["COMPILE_SDK_VERSION"]
 
-
-
     defaultConfig {
         minSdkVersion rootProject.ext.android["MIN_SDK_VERSION"]
         targetSdkVersion rootProject.ext.android["TARGET_SDK_VERSION"]
         versionCode 1
-        versionName "2.9.42"
-
+        versionName "1.0"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            consumerProguardFiles file('.').listFiles(new FilenameFilter() {
+                @Override
+                boolean accept(File file, String s) {
+                    return s.endsWith('.pro')
+                }
+            })
         }
     }
 
 }
 
-dependencies {
-    implementation rootProject.ext.dependencies["recyclerview-v7"]
-}
