--- a/WanAndroid/build.gradle
+++ b/WanAndroid/build.gradle
@@ -46,7 +46,7 @@ android {
             signingConfig signingConfigs.release
             shrinkResources true
             zipAlignEnabled true
-            minifyEnabled true
+            minifyEnabled rootProject.ext.MINIFY_ENABLED
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
