--- a/ThirdLibrarys/Banner/build.gradle
+++ b/ThirdLibrarys/Banner/build.gradle
@@ -16,7 +16,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled rootProject.ext.MINIFY_DISABLED
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
