--- a/ThirdLibrarys/MRVAH/build.gradle
+++ b/ThirdLibrarys/MRVAH/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion rootProject.ext.android["MIN_SDK_VERSION"]
         targetSdkVersion rootProject.ext.android["TARGET_SDK_VERSION"]
         versionCode 1
-        versionName "1.2.5"
+        versionName "2.3.1"
 
     }
 
@@ -20,9 +20,12 @@ android {
         }
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
-    implementation rootProject.ext.dependencies["appcompat-v7"]
-    implementation rootProject.ext.dependencies["zxing"]
+    implementation rootProject.ext.dependencies["recyclerview-v7"]
 }
