--- a/ThirdLibrarys/TomBaseLib/build.gradle
+++ b/ThirdLibrarys/TomBaseLib/build.gradle
@@ -22,7 +22,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled rootProject.ext.MINIFY_DISABLED
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
