--- a/ThirdLibrarys/TomNetwork/build.gradle
+++ b/ThirdLibrarys/TomNetwork/build.gradle
@@ -15,7 +15,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled rootProject.ext.MINIFY_DISABLED
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
