--- a/Umeng/Share/build.gradle
+++ b/Umeng/Share/build.gradle
@@ -14,7 +14,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled rootProject.ext.MINIFY_DISABLED
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
