--- a/WanAndroid/build.gradle
+++ b/WanAndroid/build.gradle
@@ -38,7 +38,7 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
-            minifyEnabled false
+            minifyEnabled rootProject.ext.MINIFY_DISABLED
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
