优化.so文件的使用。

--- a/RongCloud/IMKit/build.gradle
+++ b/RongCloud/IMKit/build.gradle
@@ -33,7 +33,7 @@ android {
 dependencies {
     api fileTree(dir: 'src/main/libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["support-v4"]
-    implementation project(':RongCloud:IMLib')
+    api project(':RongCloud:IMLib')
 }
 
 repositories {
