--- a/Umeng/Analytics/build.gradle
+++ b/Umeng/Analytics/build.gradle
@@ -24,5 +24,5 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api files('libs/umeng-analytics-7.5.3.jar')
-    api project(':Umeng:Common')
+    implementation project(':Umeng:Common')
 }
