--- a/Umeng/Push/build.gradle
+++ b/Umeng/Push/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     api files('libs/alicloud-android-utils-1.0.3.jar')
     api files('libs/umeng-push-4.2.0.jar')
     api files('libs/utdid4all-1.1.5.3_proguard.jar')
-    api project(':Umeng:Common')
+    implementation project(':Umeng:Common')
 }
