升级依赖库

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,8 @@
 include ':CommonSDK', ':WanAndroid', ':Module_IM'
 include ':Umeng:Share', ':Umeng:Push', ':Umeng:Analytics', ':Umeng:Common'
-include ':ThirdLibrarys:BRVAH', ':ThirdLibrarys:QMUI', ':ThirdLibrarys:AgentWeb', ':ThirdLibrarys:PhotoView', ':ThirdLibrarys:QRScan', ':ThirdLibrarys:Banner', ':ThirdLibrarys:TomNetwork', ':ThirdLibrarys:TomBaseLib', ':ThirdLibrarys:FreeProGuard', ':ThirdLibrarys:MRVAH'
+include ':ThirdLibrarys:BRVAH', ':ThirdLibrarys:MRVAH'
+include ':ThirdLibrarys:QMUI', ':ThirdLibrarys:PhotoView'
+include ':ThirdLibrarys:Banner', ':ThirdLibrarys:QRScan', ':ThirdLibrarys:AgentWeb'
+include ':ThirdLibrarys:TomNetwork', ':ThirdLibrarys:TomBaseLib', ':ThirdLibrarys:FreeProGuard'
 include ':RongCloud:IMLib', ':RongCloud:IMKit', ':RongCloud:CallLib', ':RongCloud:CallKit'
 include ':Album:EasyPhoto'
