--- a/config.gradle
+++ b/config.gradle
@@ -19,6 +19,7 @@ ext {
             APPCOMPAT_VERSION          : '28.0.0',
             CONSTRAINT_VERSION         : '1.1.3',
             MULTIDEX_VERSION           : '1.0.3',
+            ANDROIDX_VERSION           : '1.0.0',
             EVENTBUS_VERSION           : '3.1.1',
             GLIDE_VERSION              : '4.8.0',
             GREENDAO_VERSION           : '3.2.2',
@@ -43,6 +44,7 @@ ext {
             "support-vector-drawable"  :  "com.android.support:support-vector-drawable:${version[ "APPCOMPAT_VERSION"]}",
             "support-core-utils"       : "com.android.support:support-core-utils:${version["APPCOMPAT_VERSION"]}",
             "multidex"                 : "com.android.support:multidex:${version["MULTIDEX_VERSION"]}",
+            "androidx"                 : "androidx.appcompat:appcompat:${version["ANDROIDX_VERSION"]}",
 
             "butterknife"              : "com.jakewharton:butterknife:${version["BUTTERKNIFE_VERSION"]}",
             "butterknife-compiler"     : "com.jakewharton:butterknife-compiler:${version["BUTTERKNIFE_VERSION"]}",
