--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include ':Umeng:Share', ':Umeng:Push', ':Umeng:Analytics', ':Umeng:Common'
 include ':ThirdLibrarys:BRVAH', ':ThirdLibrarys:MRVAH'
 include ':ThirdLibrarys:QMUI', ':ThirdLibrarys:PhotoView'
 include ':ThirdLibrarys:Banner', ':ThirdLibrarys:QRScan', ':ThirdLibrarys:AgentWeb'
-include ':ThirdLibrarys:TomNetwork', ':ThirdLibrarys:TomBaseLib', ':ThirdLibrarys:FreeProGuard'
+include ':ThirdLibrarys:TomNetwork', ':ThirdLibrarys:TomBaseLib'
+include ':ThirdLibrarys:ToMvp', ':ThirdLibrarys:FreeProGuard'
 include ':RongCloud:IMLib', ':RongCloud:IMKit', ':RongCloud:CallLib', ':RongCloud:CallKit'
 include ':Album:EasyPhoto'
