--- a/config.gradle
+++ b/config.gradle
@@ -43,6 +43,7 @@ ext {
             "recyclerview-v7"          : "com.android.support:recyclerview-v7:${version["APPCOMPAT_VERSION"]}",
             "support-vector-drawable"  :  "com.android.support:support-vector-drawable:${version[ "APPCOMPAT_VERSION"]}",
             "support-core-utils"       : "com.android.support:support-core-utils:${version["APPCOMPAT_VERSION"]}",
+            "support-annotations"       : "com.android.support:support-annotations:${version["APPCOMPAT_VERSION"]}",
             "multidex"                 : "com.android.support:multidex:${version["MULTIDEX_VERSION"]}",
             "androidx"                 : "androidx.appcompat:appcompat:${version["ANDROIDX_VERSION"]}",
 
